Fixed alignment issue and tweaked design for the home page

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -6,7 +6,7 @@
 	overflow:none;
     //@include box-shadow(0 0 3px #999);
 	background-color:#fff;
-	margin: 6px 6px 20px 6px;
+	margin: 6px 6px 20px 6px !important;
 	& img{width:100%;
 		height:150px;
 		}
@@ -28,13 +28,14 @@
 		}
 		
 .wrapper{
-	width:100%;
+	//width:100%;
 	padding:10px 10px 20px 10px;
 	&.dark{
 	background-color:#000;}
 	&.light{
 		//@include box-shadow(0 0 3px #999);
 		background-color:#fff;
+		@include border-radius(5px);
 	}
 }
 
